# pilsbot_hw_ros

./: .gitmodules  LICENSE  README.md
.docker/: Dockerfile  docker-compose.yml  ros_entrypoint.sh
pilsbot_control/: CMakeLists.txt  package.xml
pilsbot_control/config/: acker_diff_controller.yaml  acker_diff_controller_sim.yaml  diff_drive_controller.yaml
pilsbot_control/launch/: pilsbot_control.launch
pilsbot_description/: CMakeLists.txt  package.xml
pilsbot_description/urdf/: pilsbot.urdf.xacro
pilsbot_driver/: CMakeLists.txt  package.xml  pilsbot_driver.xml
pilsbot_driver/config/: example_head_mcu_communication.yaml  janosch_ps4.yaml  medion_0678.yaml  ps4.yaml  ps4_pad.yaml  ralthyshit.yaml
pilsbot_driver/etc/: calibrate_steering_angle.py  hoverboard-api-testing.cpp  quick_arg_parser.hpp
pilsbot_driver/include/pilsbot_driver/: linear_interpolation.hpp  pilsbot_driver.h
pilsbot_driver/launch/: head_mcu_connection.launch.py  pilsbot.launch  pilsbot.launch.py  pilsbot_teleop.launch.py  teleop.launch  teleop.launch.py
pilsbot_driver/src/: Readme-Flashing.md  head_mcu_node.cpp  pilsbot_driver.cpp  pilsbot_driver_node.cpp
pilsbot_driver_msgs/: CMakeLists.txt  package.xml
pilsbot_driver_msgs/msg/: HoverboardAPISensors.msg  SteeringAxleSensors.msg  SteeringAxleSensorsStamped.msg
pilsbot_hw_ros/: CMakeLists.txt  package.xml
pilsbot_sensor_broadcaster/: CMakeLists.txt  package.xml  psb_plugin.xml
pilsbot_sensor_broadcaster/config/: pilsbot_sensor_broadcaster.yaml
pilsbot_sensor_broadcaster/include/pilsbot_sensor_broadcaster/: pilsbot_sensor_broadcaster.hpp  visibility_control.h
pilsbot_sensor_broadcaster/src/: pilsbot_sensor_broadcaster.cpp
