<?xml version="1.0"?>
<package format="3">
  <name>pilsbot_control</name>
  <version>0.1.0</version>
  <description>The pilsbot_control package</description>

  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>

  <license>MIT</license>

  <author email="j.hackbarth@cubegaming.de">Johannes Hackbarth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>controller_manager</depend>

</package>
