<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilsbot_control</name>
  <version>0.1.0</version>
  <description>The pilsbot_control package</description>

  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>

  <license>MIT</license>

  <author email="j.hackbarth@cubegaming.de">Johannes Leckmeister Hackbarth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
