<?xml version="1.0"?>
<package format="2">
  <name>pilsbot_description</name>
  <version>0.1.0</version>
  <description>The pilsbot_description package</description>

  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>

  <license>MIT</license>

  <author email="j.hackbarth@cubegaming.de">Johannes Hackbarth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

</package>
