<?xml version="1.0"?>
<package format="3">
  <name>pilsbot_driver</name>
  <version>0.1.0</version>
  <description>The pilsbot_driver package contains all hardware related drivers.</description>

  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>

  <license>MIT</license>

  <author email="j.hackbarth@cubegaming.de">Johannes Hackbarth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>aliencontrol</depend>
  <depend>controller_manager</depend>
  <depend>diagnostic_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>joy</depend>
  <depend>pilsbot_control</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp</depend>
  <depend>teleop_twist_joy</depend>

</package>
