<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilsbot_driver</name>
  <version>0.1.0</version>
  <description>The pilsbot_driver package contains all hardware related drivers.</description>

  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>
  <maintainer email="info@pascalpieper.de">Pascal Pieper</maintainer>

  <license>MIT</license>

  <author email="j.hackbarth@cubegaming.de">Johannes Hackbarth</author>
  <author email="info@pascalpieper.de">Pascal Pieper</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>diagnostic_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joy</depend>
  <depend>pilsbot_control</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp</depend>
  <depend>teleop_twist_joy</depend>
  <depend>pilsbot_driver_msgs</depend>
  <exec_depend>acker_diff_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
