cmake_minimum_required(VERSION 3.0.2)
project(pilsbot_hw_ros)

find_package(catkin REQUIRED)

catkin_package(
#  LIBRARIES pilsbot_ros
)

#   src/${PROJECT_NAME}/pilsbot_ros.cpp

# add_executable(${PROJECT_NAME}_node src/pilsbot_ros_node.cpp)

# catkin_install_python(PROGRAMS

## Mark executables for installation
## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
# install(TARGETS ${PROJECT_NAME}_node

## Mark libraries for installation
## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
# install(TARGETS ${PROJECT_NAME}
#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}

# catkin_add_gtest(${PROJECT_NAME}-test test/test_pilsbot_ros.cpp)

