<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilsbot_hw_ros</name>
  <version>0.0.0</version>
  <description>The pilsbot_ros package</description>

  <maintainer email="j.hackbarth@cubegaming.de">Johannes Hackbarth</maintainer>

  <license>TODO</license>

  <author email="j.hackbarth@cubegaming.de">Johannes Hackbarth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pilsbot_control</build_depend>
  <build_depend>pilsbot_driver_msgs</build_depend>
  <build_depend>pilsbot_driver</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
