<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilsbot_sensor_broadcaster</name>
  <version>0.0.1</version>
  <description>Publisher for hoverboard_api and  head_mcu sensors</description>
  <maintainer email="accounts@pascalpieper.de">pp</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pilsbot_driver_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <build_depend>pluginlib</build_depend>
  <depend>controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
